--- a/confs/lynx.yml
+++ b/confs/lynx.yml
@@ -9,6 +9,14 @@ device: 'cuda:0'
 batch_size: 1
 disable_augment: false
 
+cldm_type: 'lineart'
+prompt: ''
+negative_prompt: ''
+inference_step: 26
+
+log_image_update_every: 100
+log_video_update_every: 100
+
 resize: 512
 
 key_weight: 1
@@ -16,3 +24,13 @@ style_weight: 100
 structure_weight: 5e-6
 
 vgg_layers: [1, 3, 6, 8, 11, 13, 15, 17, 20, 22, 24, 26, 29, 31, 33, 35]
+model_params:
+  input_channels: 3
+  output_channels: 3
+  norm_layer: 'instance_norm'
+  use_bias: true
+  tanh: true
+  filters: [32, 64, 128, 128, 64, 32]
+  cross_attention_dim: 128
+  resnet_blocks: 1
+  use_attention: false
